--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -78,6 +78,7 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+			<!-- <version>2.7.18</version> -->
 		</dependency>
 		
 		<dependency>
