--- a/shop/pom.xml
+++ b/shop/pom.xml
@@ -97,8 +97,12 @@
 			<scope>test</scope>
 			<version>${spring-security.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.3.9</version>
+		</dependency>
  	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
