--- a/shop/src/main/resources/application-test.properties
+++ b/shop/src/main/resources/application-test.properties
@@ -11,5 +11,5 @@ spring.jpa.database-platform = org.hibernate.dialect.H2Dialect
 # spring.datasource.username = w
 # spring.datasource.password = 1
 # 
-# spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create
 # spring.jpa.database-platform = org.hibernate.dialect.MySQL8Dialect
